# arbtt

./: .gitignore  .travis-push-gh-pages.sh  .travis-setup-linux.sh  .travis-setup-windows.sh  .travis.yml  CNAME  README  README.Win32  README.md  Setup.hs  arbtt-capture.desktop  arbtt.cabal  arbtt.css  arbtt.html  arbtt.js  categorize.cfg  default.nix  flake.nix  index.html  install-ubuntu-deps.sh  modpath.iss  setup.iss  stack.yaml
.github/workflows/: ci.yml  pages.yml
doc/: Makefile  arbtt.xml
doc/profdata/: arbtt-stats-7.0.4.prof  arbtt-stats-7.4.1.prof
doc/users_guide/: arbtt-capture.html  arbtt-dump.html  arbtt-import.html  arbtt-recover.html  arbtt-stats.html  configuration.html  contributed.html  copyright.html  effective-use.html  index.html  references.html  release-notes.html  troubleshooting.html
src/: Capture.hs  Categorize.hs  CommonStartup.hs  Data.hs  DumpFormat.hs  LeftFold.hs  LockFile.hs  Stats.hs  TermSize.hsc  TimeLog.hs  UpgradeLog1.hs  capture-main.hs  capture.hs  dump-main.hs  import-main.hs  recover-main.hs  stats-main.hs
src/Capture/: OSX.hs  Win32.hs  X11.hs
src/Data/: MyText.hs
src/Data/Binary/: StringRef.hs
src/Data/List/: TakeR.hs
src/Data/Regex/: Cache.hs
src/Graphics/OSX/: Window.hs
src/Graphics/Win32/Window/: Extra.hsc
src/Graphics/X11/: XScreenSaver.hsc
src/System/Locale/: SetLocale.hsc
src/System/Win32/: Mutex.hsc
src/Text/Parsec/: ExprFail.hs
src/Text/ParserCombinators/Parsec/: Expr.hs  ExprFail.hs
src/Text/Regex/PCRE/Light/: Char8.hs  String.hs  Text.hs
test/: arbtt-dump_small.case  arbtt-import_small.case  arbtt-recover_small_borked.case  arbtt-stats_small.case  arbtt-stats_unicode.case  test.sh
test/in/: arbtt-dump_small.case  arbtt-stats_small.case  arbtt-stats_unicode.case  categorize.cfg
tests/: .gitignore  binversions_borked_recover.out  binversions_dump.out  categorize.cfg  condition_bindings.cfg  condition_bindings_stats.out  gap-handling.cfg  gap-handling.out  issue14.cfg  issue4.cfg  issue5.cfg  let.cfg  small.cfg  small_borked_recover.out  small_dump_json.out  small_import.in  small_import.out  small_import_json.in  small_import_json.out  small_import_json_list.in  small_stats_csv.out  small_v4.cfg  small_v4_import.in  small_v5_stats.out  test.hs  unicode.cfg
website/: arbtt.css  index.html
